# gatekeeping-signaling-f85b-claude

./: .resource_finder_complete  README.md  REPORT.md  arxiv_filtered.json  arxiv_search_more.json  arxiv_search_raw.json  arxiv_targeted.json  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
_resource_finder_scripts/: README.md  dl_correct.py  dl_more.py  dl_specific.py  download_papers.py  download_s2.py  filter_arxiv.py  find_more_arxiv.py  search_arxiv.py  search_more.py  search_semantic_scholar.py
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_search_results/: Spence_signaling_job_market_labor_economics_theory_20260506_200438.jsonl  publication_volume_growth_peer_review_quality_signal_information_theory_20260506_200413.jsonl  signaling_theory_peer_review_gatekeeping_academic_publishing_diminishing_signal_20260506_200215.jsonl
papers/: README.md
results/: analytical_capacity_policies.csv  analytical_sweep_fixed_capacity.csv  bean_counting_sweep.csv  calibration_best_sigma.csv  calibration_iclr.csv  consumption_sweep.csv  empirical_aaai.csv  empirical_acl.csv  empirical_cvpr.csv  empirical_emnlp.csv  empirical_iclr.csv  empirical_icml.csv  empirical_nips.csv  empirical_summary.csv  empirical_summary.json  statistical_tests.json
src/: analytical_signaling.py  consumption_model.py  (+4 more)
(+20 files in other folders)
