[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for gatekeeping signaling experiments"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=3.0.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pypdf>=6.10.2",
    "requests>=2.33.1",
    "scipy>=1.15.3",
]
